--- a/Hydra/.project
+++ b/Hydra/.project
@@ -20,5 +20,10 @@
 			<type>1</type>
 			<locationURI>PARENT-1-PROJECT_LOC/lib/geckonlib.jar</locationURI>
 		</link>
+		<link>
+			<name>lib/log4j-1.2.16.jar</name>
+			<type>1</type>
+			<locationURI>PARENT-1-PROJECT_LOC/lib/log4j-1.2.16.jar</locationURI>
+		</link>
 	</linkedResources>
 </projectDescription>
