--- a/Hydra.Test/.classpath
+++ b/Hydra.Test/.classpath
@@ -5,5 +5,6 @@
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Hydra"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/Hydra.Commons"/>
+	<classpathentry kind="lib" path="lib/log4j-1.2.16.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
